=== HEAD

* Save a new one_to_one associated object once instead of twice in the nested_attributes plugin (jeremyevans)

* Don't add unnecessary filter condition when passing a new object to a one_to_one setter method (jeremyevans)

* Differentiate between column references and method references in many_through_many associations (jeremyevans)

* Use :qualify=>:deep option when joining tables in model association datasets (jeremyevans)

* Support :qualify=>:deep option to Dataset#join_table to qualify subexpressions in the expression tree (jeremyevans)

* Support :qualify=>false option to Dataset#join_table to not automatically qualify keys/values (jeremyevans)

* Make filter by associations support use column references and method references correctly (jeremyevans)

* Call super in list plugin before_create (jeremyevans) (#504)

* Do not automatically cast String to text in pg_auto_parameterize extension (jeremyevans)

* Support alter_table validate_constraint on PostgreSQL for validating constraints previously declared with NOT VALID (jeremyevans)

* Support :not_valid option when adding foreign key constraints on PostgreSQL (jeremyevans)

* Support exclusion constraints on PostgreSQL (jeremyevans)

* Allow for overriding the create/alter table generators used per Database object (jeremyevans)

* Make casting to Date/(Time/DateTime) use date/datetime functions on SQLite (jeremyevans)

* Add pg_range_ops extension for DSL support for PostgreSQL range operators and functions (jeremyevans)

* The json library is now required when running the plugin/extension specs (jeremyevans)

* Use change migrations instead of up/down migrations in the schema_dumper (jeremyevans)

* Dump unsigned integer columns with a check >= 0 constraint in the schema_dumper (stu314)

* Switch the :key_hash entry to the association :eager_loader option to use the method symbol(s) instead of the column symbol(s) (jeremyevans)
